--- a/HW5/hw5.html
+++ b/HW5/hw5.html
@@ -24,7 +24,7 @@ body {
   cursor: pointer;
   border-radius: 8px;
 }
-.bomb {
+.bomb,.abm {
   background-color: white;
   opacity: 0.5;
   color: black; 
@@ -35,7 +35,8 @@ body {
 
 <body>
 <div id="info">
-  <button class="button bomb">Bomb GO</button>
+  <button class="button bomb">Bomb GO</button></br>
+  <button class="button abm">ABM GO</button>
 </div>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.5.1/dat.gui.min.js'></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r76/three.min.js"></script>
@@ -269,7 +270,7 @@ void main() {
 var camera, scene, renderer, controls;
 var planeLen = 400;
 
-var bomb, halfWidth = 6, bodyLen = 33, headLen = 8;
+var bomb, halfWidth = 6, bodyLen = 33, headLen = 8, seekDist = 100;
 var bombInitPos = new THREE.Vector3(-planeLen * 0.4, 0, planeLen * 0.4);
 
 var balloon = [];
@@ -295,6 +296,9 @@ $('.bomb').click(function(){
     scene.add(bomb);
   }
 });
+$('.abm').click(function(){
+  abm.fly = true;
+});
 
 init();
 animate();
@@ -316,14 +320,14 @@ function init() {
   scene.add(gridXZ);
 
   var light = new THREE.PointLight(0xffffff, 5);
-  light.position.set(0, 20, 0);
+  light.position.set(0, 100, 0);
   scene.add(light);
   
   var blockMaterial = new THREE.MeshLambertMaterial({transparent: true});
   var total = 9;
-  balloon.push(new Block(10, new THREE.Vector3(planeLen * 0.1, 50, -planeLen * 0.25), blockMaterial));
-  balloon.push(new Block(10, new THREE.Vector3(planeLen * 0.2, 50, -planeLen * 0.25), blockMaterial));
-  balloon.push(new Block(10, new THREE.Vector3(planeLen * 0.3, 50, -planeLen * 0.25), blockMaterial));
+  balloon.push(new Block(15, new THREE.Vector3(planeLen * 0.1, 40, -planeLen * 0.25), blockMaterial));
+  balloon.push(new Block(15, new THREE.Vector3(planeLen * 0.2, 40, -planeLen * 0.25), blockMaterial));
+  balloon.push(new Block(15, new THREE.Vector3(planeLen * 0.3, 40, -planeLen * 0.25), blockMaterial));
   balloon.push(new Block(15, new THREE.Vector3(planeLen * 0.1, 80, -planeLen * 0.25), blockMaterial));
   balloon.push(new Block(15, new THREE.Vector3(planeLen * 0.2, 80, -planeLen * 0.25), blockMaterial));
   balloon.push(new Block(15, new THREE.Vector3(planeLen * 0.3, 80, -planeLen * 0.25), blockMaterial));
@@ -337,13 +341,11 @@ function init() {
   scene.add(abm);
   
   bomb = new Bomb(
-    disappearTime,
-    halfWidth, bodyLen, headLen,
-    bombInitPos
+    halfWidth, bodyLen, headLen
   );
   var target_building = buildingPos.clone();
   target_building.y = buildingHeigh;
-  bomb.init(target_building);
+  bomb.init(target_building, seekDist, disappearTime, bombInitPos);
   
   car = new Car(bomb, halfWidth, bodyLen);
   scene.add(car);
@@ -360,7 +362,7 @@ function init() {
 //  gui.remember(gc);
   var bombControl = gui.addFolder('BombControl');
   bombControl.open();
-  var pitch = bombControl.add(gc, 'Pitch', 0, Math.PI * 0.5);
+  var pitch = bombControl.add(gc, 'Pitch', 0, Math.PI * 0.4);
   var yaw = bombControl.add(gc, 'Yaw', -Math.PI * 0.5, Math.PI * 0.5);
   pitch.onChange(function(value) {
     car.rotation.x = -value;
@@ -417,10 +419,10 @@ function createBuildingPoint(){
 
 function initGc(){
   gc = {
-    Pitch: 0.9,
+    Pitch: 0.7,
     Yaw: 0.5,
   }
-  car.rotation.x = -0.9;
+  car.rotation.x = -0.7;
   car.rotation.z = -0.5;
 }
 
@@ -428,9 +430,14 @@ function collisionCheck(bombHead, points, balloon){
   if(bombHead.x >= points[0] && bombHead.x <= points[1] &&
      bombHead.y >= points[2] && bombHead.y <= points[3] &&
      bombHead.z >= points[4] && bombHead.z <= points[5]){
-
+    bomb.hit = true;
     return true;
   }
+  if(abm.position.clone().sub(bombHead).length() < abm.halfLen){
+    scene.remove(abm);
+    return true;
+  }
+  //else if()
   for(var i = 0; i < balloon.length; i++){
     if(balloon[i].pos.clone().sub(bombHead).length() < balloon[i].r){
       scene.remove(balloon[i].mesh);
@@ -443,14 +450,15 @@ function collisionCheck(bombHead, points, balloon){
 function animate() {
 
   var dt = clock.getDelta();
+  bomb.checkNearBlock(balloon);
   if(car.shoot){  
     var collision;
-	
-    bomb.checkNearBlock(balloon);
     bomb.update(dt, buildingHeigh * 2);
 	var headPos = bomb.localToWorld(new THREE.Vector3(0, bomb.bodyLen, 0));
     collision = collisionCheck(headPos, buildingPoint, balloon);
-
+    if(abm.fly){
+      abm.update(dt, headPos, bomb);
+    }
     if(collision){
       scene.add(fire);
       fire.position.copy(headPos);
@@ -463,15 +471,18 @@ function animate() {
   else if(bomb.disappear){
     bomb.time -= dt * 5;
     bomb.mesh.material.opacity = bomb.time <= 0 ? 0 : (0.6 * bomb.time / disappearTime);
-    building.material.opacity = bomb.time <= 0 ? 0 : (0.6 * bomb.time / disappearTime);
+    if(bomb.hit) building.material.opacity = bomb.time <= 0 ? 0 : (0.6 * bomb.time / disappearTime);
     if(bomb.time <= -5){
       bomb.disappear = false;
-      scene.remove(building);
+      abm.fly = false;
+      if(bomb.hit) scene.remove(building);
       scene.remove(fire);
     }
-/*    if(bomb.time < 5){
+/*
+    if(bomb.time < 5){
       fire.geometry.scale(0.5, 0.5, 0.5);
-    }*/
+    }
+*/
     fireMaterial.uniforms['time'].value = .00025 * (Date.now() - start);
 
   }
