--- a/HW0/hw0.html
+++ b/HW0/hw0.html
@@ -23,7 +23,7 @@ body {
 
 <body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r76/three.min.js"></script>
-<script src="https://threejs.org/examples/js/controls/OrbitControls.js"></script>
+<script src="../files/OrbitControls.js"></script>
 <script>
 var scene, camera, renderer;
 var controls;
