--- a/HW6/hw6.html
+++ b/HW6/hw6.html
@@ -49,7 +49,7 @@ strong {
 </div>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.5.1/dat.gui.min.js'></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r76/three.min.js"></script>
-<script src="https://threejs.org/examples/js/controls/OrbitControls.js"></script>
+<script src="../files/OrbitControls.js"></script>
 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 <script src="hw6.js"></script>
 <script src="ccdbox.js"></script>
